<resources>
    <string name="app_name">FinalProject - Shower Thoughts</string>
    <string name="labelWelcome">Welcome to Gara - Shower Thoughts</string>
    <string name="labelRegister">Register</string>
    <string name="labelLogin">Login</string>
    <string name="labelRegisterNewUser">Register new account</string>
    <string name="labelEmail">Email:</string>
    <string name="labelPassword">Password:</string>
    <string name="labelLoginCurrentUser">Welcome Back :)</string>
    <string name="labelRegisterNewAccount">Register new account</string>
    <string name="taskDifficulty">Difficulty</string>
    <string name="labelShowerThoughts">Shower Thoughts :)</string>
    <string name="labelUpdatePassword">Update Password</string>
    <string name="buttonUpdatePassword">Update</string>
    <string name="labelWrittenBy">Written by:</string>
    <string name="labelRateThisThought">Rate this thought</string>
    <string name="labelAddShowerThought">Add a shower thought</string>
    <string name="labelThought">Thought: </string>
    <string name="labelRating">Rating: </string>
    <string name="buttonAddShowerThought">Submit</string>
    <string name="labelEmailUser">Your email is:</string>
    <string name="labelAppInfoActivity">Application Information</string>
    <string name="labelAuthor">Author: Franklin Jara</string>
    <string name="labelVersion">Version: 1.0</string>
    <string name="labelContact">Contact: franklinjaradev@gmail.com</string>
    <string name="githubLabel">Check this app in my github :)</string>
    <string name="githubLink">https://github.com/makyfj/ShowerThoughts</string>
    <string name="buttonBackground">Background picture</string>

    <!-- Menu -->
    <string name="menuAddShowerThought">Add a shower thought</string>
    <string name="menuFilterByRating">Filter thought by rating</string>
    <string name="menuClearFilter">Clear filter</string>
    <string name="menuUpdatePassword">Update my password</string>
    <string name="menuDeleteAccount">Delete my account</string>
    <string name="menuAppInfo">App info</string>
    <string name="menuUserInfo">User info</string>
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="backgroundCategory">Background</string>
    <string name="backgroundPicture">Enable background picture</string>
    <string name="preferenceTitle">Preferences</string>
    <string name="textSizeLabel">Text size</string>
    <string name="textSizeSummary">Text size will change, you might need to restart app to see changes</string>
</resources>