<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addShowerThought"
        android:title="@string/menuAddShowerThought" />

    <item
        android:id="@+id/filterByRating"
        android:title="@string/menuFilterByRating" />

    <item
        android:id="@+id/clearFilter"
        android:title="@string/menuClearFilter" />

    <item
        android:id="@+id/updatePassword"
        android:title="@string/menuUpdatePassword"/>

    <item
        android:id="@+id/deleteUser"
        android:title="@string/menuDeleteAccount"/>

    <item
        android:id="@+id/appInfo"
        android:title="@string/menuAppInfo" />

    <item
        android:id="@+id/userInfo"
        android:title="@string/menuUserInfo"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"/>

</menu>