<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="background_category"
        android:title="@string/backgroundCategory">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="background"
            android:title="@string/backgroundPicture"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="textColor_category"
        android:title="@string/textSizeLabel">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="textSize"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Edit text preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="help_category"
        android:title="Help">

        <Preference
            android:key="feedback"
            android:summary="Report technical issues or suggest new features"
            android:title="Send feedback"/>

    </PreferenceCategory>
</PreferenceScreen>